# maxvsc-sw-mvp

./: .gitignore  ENGINEERING_BASELINE  MaxVSC_ultrastable_demo.ipynb  README.md  pyproject.toml  requirements.txt  setup.cfg
configs/: params.json  scenario.json
dashboard/: README.md  __init__.py  app.py  config.py  io.py  main.py  requirements.txt  schemas.py
docs/: mvp_final_report.md
examples/: params_base.json  params_cli_demo.json  params_damped.json  params_damped_pretty.json  params_damped_pretty_v2.json  params_damped_pretty_v3.json  params_fast.json  params_stable.json  params_ultrastable.json  plot_damped_pretty_v3.py  plot_ultrastable.py  scenario_cli_pq_step.json  scenario_cli_ultrastable_pq.json  scenario_pq_damped.json  scenario_pq_damped_pretty_v2.json  scenario_pq_damped_pretty_v3.json  scenario_pq_small_step.json  scenario_pq_step.json  scenario_pq_ultrastable.json  scenario_vdcq_damped.json  scenario_vdcq_damped_pretty.json  scenario_vdcq_damped_pretty_v2.json  scenario_vdcq_damped_pretty_v3.json  scenario_vdcq_small_step.json  scenario_vdcq_step.json  scenario_vdcq_ultrastable.json  step_damped.py  step_damped_pretty.py  step_damped_pretty_v2.py  step_damped_pretty_v3.py  step_pq.py  step_stable.py  step_ultrastable.py  step_vdcq.py
notebooks/: 01_introduccion_simulador.ipynb  02_modo_PQ.ipynb  03_modo_VdcQ.ipynb  04_integradores_dt_adaptativo.ipynb  05_validacion_notebooks.ipynb  README.md
tests/: __init__.py  conftest.py  test_api_simulation.py  test_batch.py  test_cli_main.py  test_dashboard_api.py  test_exporter.py  test_imports.py  (+14 more)
(+42 files in other folders)
