[project]
name = "maxvsc-sw"
version = "0.1.0"
description = "RMS VSC-HVDC Simulator (LSA-compliant)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "you@example.com" }
]

dependencies = [
  # Core scientific stack
  "numpy>=1.26",
  "pandas>=2.0",
  "pyarrow>=14.0",

  # FastAPI dashboard + servidor
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",

  # Necesario para fastapi.testclient / starlette.testclient
  "httpx>=0.27",

  # CLI
  "click>=8.1",
]
