[metadata]
name = maxvsc-sw
version = 0.1.0
description = MaxVSC RMS VSC-HVDC simulator (MVP)
long_description = file: README.md
long_description_content_type = text/markdown
author = (tu nombre o equipo)
url = https://example.com/maxvsc-sw
license = Proprietary
license_files = ENGINEERING_BASELINE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10

[options.extras_require]
plots =
    matplotlib>=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    vscsim-cli = vscsim.cli.main:run
